# linux_trening_rts

./: README.md
01_module/: hello.c
03_windows_cmake/: CMakeLists.txt  main.cpp
06_cmake_add_library/: CMakeLists.txt  detector.h  sender.cpp  sender.h
07_cmake_add_library/: CMakeLists.txt  main.cpp
08_cmake_add_library/: CMakeLists.txt
08_cmake_add_library/detector/: CMakeLists.txt
08_cmake_add_library/sender/: CMakeLists.txt
14_docker/: Dockerfile
15_cmake/: main.cpp
17_fooservice/: foo_service.sh  fooservice.service
18_tcpservice/client/: client.cpp
18_tcpservice/server/: main.cpp
19_opengl/: CMakeLists.txt  Makefile  readme.txt  test1.cpp
20_dpkg/: CMakeLists.txt  Dockerfile  main_old.cpp
20_dpkg/detector/: CMakeLists.txt  detector.cpp
23_gdb/: Makefile
26_gdb/: Makefile  factorial.c
27_gdb_thread/: main.cpp
28_valgrind/: Makefile  main.cpp
30_update/: CMakeLists.txt  README.md  main.cpp  up2date.h
